syntax = "proto3";

package content_user;

enum Status{
    SUCCESSFULL=200;
    NOT_FOUND=404;
    NOT_AUTHORIZED=401;
    SERVICE_ERROR=500;
    BAD_REQUEST=400;
}

message UserValidationRequest {
    string id=1;
}

message UpdateLikeRequest {
    string contentId = 1;
    string userId = 2;
}

message UserValidationResponse{
    Status code=1;
}

message UpdateLikeResponse{
    Status code=1;
}

service Users {
    rpc ValidateUser(UserValidationRequest) returns (UserValidationResponse) {};
    rpc SetLikes(UpdateLikeRequest) returns (UpdateLikeResponse) {};
} 